nvidia-graphics-drivers (450.51-2) UNRELEASED; urgency=medium

  * Prepare infrastructure for packaging Tesla 450 driver releases (available
    for amd64 (including some i386 libs), arm64 and ppc64el).

 -- Andreas Beckmann <anbe@debian.org>  Fri, 17 Jul 2020 14:43:37 +0200

nvidia-graphics-drivers (450.51-1) experimental; urgency=medium

  * New upstream beta 450.51 (2020-06-24).
    - Added support for Vulkan direct-to-display on DisplayPort displays which
      are connected via DisplayPort Multi-Stream Transport (DP-MST).
    - Added a new documentation file, supported-gpus.json, which exposes a
      machine-readable list of supported GPUs and features.
    - Added an implementation of glNamedBufferPageCommitmentARB, which was
      missing from the NVIDIA driver's support for the GL_ARB_sparse_buffer
      extension.
    - Fixed a bug that could cause a KDE Plasma session to crash when running
      under Wayland.
    - Fixed a bug that could cause some Swap Group configurations to present
      at half of the display refresh rate.
    - Added a new Connector-N display connector name alias type, with a unique
      alias assigned to each physical display connector on a GPU. See the
      README for more information.
    - Fixed a bug that prevented X11 EGL displays from being reinitialized.
    - The 450 driver series is the last that supports NvFBC's
      NVFBC_CAPTURE_TO_HW_ENCODER capture interface, which has been deprecated
      since NVIDIA Capture SDK 6.0 released in 2017. Future NVIDIA drivers
      after the 450 series will return NVFBC_ERR_UNSUPPORTED if that capture
      interface is requested.
      The recommended way to encode captured frames with NVENC is by using the
      NVIDIA Video Codec SDK.
      See: https://developer.nvidia.com/nvidia-video-codec-sdk
    - Implemented support for NVIDIA NGX. A new library, libnvidia-ngx.so, has
      been added to support the new functionality. This new library is needed by