@@ -88,6 +88,11 @@ then
 	VERSIONS[441]=440.64.00
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-tesla-450.ids 2>/dev/null
+then
+	VERSIONS[451]=450.51.05
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids 2>/dev/null
 then
 	# 999 means current
@@ -229,6 +234,9 @@ fi
 			echo "Your card is only supported on the amd64 platform."
 			echo "Your card is only supported up to the 390 legacy drivers series."
 			PACKAGE="nvidia-legacy-390xx-driver:amd64"
+		elif [[ -n ${VERSIONS[451]} ]]; then
+			echo "Your card is supported by the Tesla 450 drivers series."
+			PACKAGE="nvidia-tesla-440-driver"
 		elif [[ -n ${VERSIONS[441]} ]]; then
 			echo "Your card is supported by the Tesla 440 drivers series."
 			PACKAGE="nvidia-tesla-440-driver"
@@ -247,6 +255,9 @@ fi
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
 		else
 			echo "Oops. Internal error 11 ($NVGA)"
+		fi
+		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-450-driver" ] && [[ -n ${VERSIONS[451]} ]]; then
+			echo "Your card is also supported by the Tesla 450 drivers series."
 		fi
 		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-440-driver" ] && [[ -n ${VERSIONS[441]} ]]; then
 			echo "Your card is also supported by the Tesla 440 drivers series."
