@@ -2,6 +2,7 @@ nvidia-graphics-drivers (450.51-2) UNRELEASED; urgency=medium
 
   * Prepare infrastructure for packaging Tesla 450 driver releases (available
     for amd64 (including some i386 libs), arm64 and ppc64el).
+  * nvidia-detect: Add support for Tesla 450 drivers.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 17 Jul 2020 14:43:37 +0200
 
